# afluente

./: .flake8  .gitignore  .travis.yml  Pipfile  Procfile  README.md  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
afluente/: settings.py  urls.py  wsgi.py
afluente/core/: admin.py  apps.py  models.py  views.py
afluente/core/migrations/: 0001_initial.py  0002_auto_20180717_1146.py  0003_auto_20181005_1531.py
afluente/core/templates/: base.html  home.html
afluente/core/templates/core/: base.html  contato.html  dashboard.html  home.html
afluente/core/templates/registration/: login.html
afluente/core/tests/: test_login.py
afluente/customers/: admin.py  apps.py  models.py
afluente/customers/migrations/: 0001_initial.py  0002_auto_20210502_2242.py
afluente/customers/tests/: test_models.py
afluente/demo/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
afluente/demo/migrations/: 0001_initial.py  0002_cliente_imagem.py  0003_auto_20181005_1531.py  0004_auto_20181016_2152.py  0005_cliente_imagem.py  0006_auto_20181110_1854.py  0007_auto_20181110_1908.py  0008_auto_20181113_1059.py
afluente/demo/templates/demo/: client_form.html  index.html
afluente/demo/tests/: test_cliente_view_create.py  test_cliente_view_new.py  test_index_view.py  test_views.py
afluente/services/: admin.py  apps.py  facade.py  models.py
afluente/services/migrations/: 0001_initial.py  0002_auto_20210502_2242.py  0003_auto_20210624_2238.py
afluente/services/tests/: test_services.py
afluente/tests/: tests.py
contrib/: env-sample
