[tool.poetry]
name = "afluente"
version = "0.1.0"
description = ""
authors = ["yzakius <isaacmob@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.1.4"
gunicorn = "^20.0.4"
python-decouple = "^3.3"
botocore = "^1.19.35"
django-s3-folder-storage = "^0.5"
psycopg2-binary = "^2.8.6"
dj-database-url = "^0.5.0"
collectfast = "^2.2.0"
pillow = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
flake8 = "^3.8.4"
pytest-django = "^4.1.0"
coverage = "^5.3"
pytest-cov = "^2.10.1"
django-debug-toolbar = "^3.2"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
