[tool.poetry]
name = "afluente"
version = "0.1.0"
description = ""
authors = ["yzakius <dev@yzakius.me>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.7"
botocore = "^1.29.73"
boto3 = "^1.26.161"
Collectfast = "^2.2.0"
Pillow = "^9.4.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
python-decouple = "^3.7"
dj-database-url = "^2.0.0"
django-debug-toolbar = "^4.1.0"
django-s3-folder-storage = "^0.5"
ipython = "^8.11.0"
pytest = "^7.2.2"
blue = "^0.9.1"

[tool.poetry.dev-dependencies]
pytest-django = "^4.5.2"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.blue]
exclude = '''
/(
  | migrations
)/
'''